--- a/canvas/player/index.html
+++ b/canvas/player/index.html
@@ -7,12 +7,9 @@
     <title>Canvas Video Player</title>
 </head>
 <body>
-    <video id="J_video" src="https://www.w3schools.com/tags/movie.mp4" width="320" height="240" autoplay controls></video>
-    <canvas id="J_canvas" width="320" height="240"></canvas>
-
-    <p class="J_p">test</p>
+    <video id="J_video"  x5-video-player-type="h5" playsinline webkit-playsinline="true" src="https://www.w3schools.com/tags/movie.mp4" width="320" height="240" controls></video>
 </body>
 <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
 <script src="https://cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
-<script src="index.js"></script>
+<!--<script src="index.js"></script>-->
 </html>
