--- a/canvas/player/index.html
+++ b/canvas/player/index.html
@@ -11,5 +11,5 @@
 </body>
 <script src="https://cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
 <script src="https://cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
-<!--<script src="index.js"></script>-->
+<script src="index.js"></script>
 </html>
