[update] 上负外边距

--- a/HTML/margin.html
+++ b/HTML/margin.html
@@ -72,6 +72,11 @@
             <p style="margin-top: 2em; margin-bottom: 2em;">给子元素增加内边距也可以防止这种现象。</p>
         </div>
     </div>
+    <div style="">
+         <p>负上外边距</p>
+         <div style="height: 100px;margin-bottom:-50px;">上方的兄弟元素</div>
+         <div style="height: 100px;margin-top:-90px;">下方的兄弟元素，有-50的负上外边距，此时与 上方的兄弟元素有 -50 的负margin-bottom 有一样的效果</div>
+    </div>
     <script>
     </script>
 </body>
